--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -1,8 +1,24 @@
 
 
 h2 {
-  border-bottom: 1px solid blue;
+  border-bottom: .1em solid blue;
   padding: 1em;
+}
+
+p {
+  font-style: italic;
+  color: deeppink;
+  background-color: aqua;
+  font-weight: bolder;
+  font-size: 2em;
+  border: .5em dotted blue;
+  padding: .2em;
+}
+
+p:hover {
+  border: .5em dotted yellow;
+  color: aqua;
+  background-color: deeppink;
 }
 
 a:hover {
@@ -12,48 +28,70 @@ a:hover {
 nav a {
   background-color: blue;
   color: white;
+  font-size: 2em;
 }
 
 nav h1 a {
   background-color: white;
-  border: 1px solid white;
+  border: .1em solid white;
+}
+
+h2 {
+  font-style: oblique;
+  text-decoration: overline;
+}
+
+h3 {
+  margin-bottom: 5em;
+  padding-top: .3em;
 }
 
 h3:hover {
   font-size: 150%;
 }
 
+h3:first-letter {
+  font-style: italic;
+  font-size: 150%;
+  color: yellow;
+  background-color: red;
+  border: .5em solid brown;
+  padding: .7em;
+}
+
 article {
-  border: 10px double purple;
+  border: 1em double purple;
   padding: 1em;
   margin: 1em;
 }
 
 footer {
   clear: both;
-  border-top: 1px solid black;
+  border-top: .1em solid black;
   margin-top: 2em;
   font-weight: bold;
   text-decoration: underline;
   font-style: italic;
   padding: .5em;
+  color: darkgreen;
+  background-color: black;
 }
 
 #projects {
-  height:25em;
+  height: 30em;
 }
 
 .projects {
   float: left;
   margin-left: 3em;
   margin-right: 3em;
-  border: 3px dotted red;
+  border: .3em dotted red;
   padding: .25em;
 }
 
 .projects img:hover {
-  border: 1px solid black;
-  border-radius: 20px;
+  border: .1em solid black;
+  border-radius: 2em;
   height: 15em;
   padding: .25em;
 }
